    eventFileOutput to specify write times

  - solvers with injection/extraction terms are now conservative using Euler
  or backward time-scheme (Crank-Nicholson still not supported)

  - All injection terms in event should be negative (as for boundaries) and
  extraction terms should be positive (as for outlet boundary fluxes)

- groundwaterFoam

  - seepage function is available (generates seepageTerm field)
  - potentialMNT field is modified if < z0

- impesFoam/anisoImpesFoam

  - generalization of the "event" use wellbore dictionary/function is obsolete

- porousScalarTransportFoam

  - water content (theta) can be given instead of saturation (Sphase) to allow
  the direct use of pre-computed stationaryGroundwaterFoam computations
  - timestep is now controlled by porous- Courant number
  
- porousScalarTransport2DFoam

  - timestep is now controlled by porous- Courant number
  - retard coefficient fixed
  - seepage outlet handled (requires seepageTerm field)
  - fatal error added when hwater field is negative
  - solver requires for initialization hwater or potential/z0

- stationaryGroundwater2DFoam

  - seepage function is available (generates seepageTerm field)
  - potentialMNT field is modified if < z0

### Libraries

- porousBoundaryConditions

  - event fixed flow rate now use a given field in transportProperties
    "eventFilePatchMassFlowRate" to allow the solvers to track BC changes and
    adapt timestep

- porousModels

  - alphaDispersion model fixed

- toolsGIS

  - event files generalized to all solvers
  - value at given time is interpolated using given event values
  - event values before first event time and after last event time is equal to 0
  - keyword event differenciation : 
    - source event for injection/extraction terms in the domains
    - patch event for tracer injection (porousScalarTransportFoam)
    - infiltration event for uniform infiltration (groundwater2DFoam)
    - output event to specify write times
