@@ -78,6 +78,7 @@ int main(int argc, char *argv[])
             << nl << endl;
     }
 
+    if (cumulativeWaterAdded > 0) Info << "Cumulated water added = " << cumulativeWaterAdded << " m3, equivalent height = " << cumulativeWaterAdded*zScale/sum(mesh.V()).value() << " m" << nl << endl;
     Info<< "End\n" << endl;
 
     return 0;
